# swc-plugin-jsx-control-statements

./: .gitignore  .npmignore  Cargo.toml  README.md  jsx-control-statements.d.ts  package.json
transform/: Cargo.toml
transform/src/: choose_jsx_element.rs  if_jsx_element.rs  lib.rs  utils.rs  visitor.rs  with_jsx_element.rs
transform/src/tags/: choose_tag.rs  for_tag.rs  if_tag.rs  mod.rs  with_tag.rs
transform/src/utils/: attributes.rs  elements.rs  mod.rs  playthings.rs
transform/tests/: fixture.rs
transform/tests/fixture/If-fragment-and-two-child/: input.js  output.js
transform/tests/fixture/If-two-child/: input.js  output.js
transform/tests/fixture/choose-empty/: input.js  output.js
transform/tests/fixture/choose-few-conditions/: input.js  output.js
transform/tests/fixture/choose-invalid-children/: input.js  output.stderr
transform/tests/fixture/choose-nested-extended/: input.js  output.js
transform/tests/fixture/choose-nested-simple/: output.js
transform/tests/fixture/choose-with-multiple-children/: input.js  output.js
transform/tests/fixture/choose-with-otherwise/: input.js  output.js
transform/tests/fixture/choose-within-if/: output.js
transform/tests/fixture/choose-without-conditions/: input.js  output.js  output.stderr
transform/tests/fixture/for/: output.js
transform/tests/fixture/for-backwards-attributes/: output.js
transform/tests/fixture/for-empty/: output.js
transform/tests/fixture/for-inside-if/: output.js
transform/tests/fixture/for-tsx-syntax/: output.js
transform/tests/fixture/for-with-expression-container/: output.js
transform/tests/fixture/for-with-index/: output.js
transform/tests/fixture/for-with-index-without-each/: output.js
transform/tests/fixture/for-with-multiple-children/: output.js
transform/tests/fixture/for-without-each/: output.js
transform/tests/fixture/if-condition-empty/: input.js  output.js
transform/tests/fixture/if-condition-expression/: input.js  output.js
transform/tests/fixture/if-else-broken-simple/: input.js  output.js  output.stderr
transform/tests/fixture/if-else-if-key/: input.js  output.js
transform/tests/fixture/if-else-key/: input.js  output.js
transform/tests/fixture/if-else-nested-extended/: input.js  output.js
transform/tests/fixture/if-else-nested-simple/: input.js  output.js
transform/tests/fixture/if-else-simple/: input.js  output.js
transform/tests/fixture/if-empty/: input.js  output.js
transform/tests/fixture/if-function-condition/: input.js  output.js
transform/tests/fixture/if-inside-for/: output.js
transform/tests/fixture/if-invalid-prop/: input.js  output.js  output.stderr
transform/tests/fixture/if-key-simple/: input.js  output.js
transform/tests/fixture/if-nested-extended/: input.js  output.js
transform/tests/fixture/if-nested-simple/: input.js  output.js
transform/tests/fixture/if-no-condition-prop/: input.js  output.js  output.stderr
transform/tests/fixture/if-string-content/: input.js  output.js
(+39 files in other folders)
