[package]
authors = ["intpp <intpplus@gmail.com>"]
description = "SWC Plugin for jsx-control-statements"
edition = "2021"
license = "ISC"
name = "swc_plugin_jsx_control_statements"
publish = false
version = "0.6.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[dependencies]
easy-error = "1.0.0"
serde = "1"
swc_core = { version = "0.106.*", features = ["ecma_plugin_transform"] }
tracing = { version = "0.1.40", features = ["release_max_level_off"] }
jsx_control_statements = { path = "./transform" }
