[package]
authors = ["intpp <intpplus@gmail.com>"]
description = "SWC Plugin for jsx-control-statements"
edition = "2021"
license = "ISC"
name = "swc_plugin_jsx_control_statements"
publish = false
version = "0.7.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[dependencies]
swc_core = { version = "10.6.1", features = ["ecma_plugin_transform"] }
jsx_control_statements = { path = "./transform" }
