[package]
name = "jsx_control_statements"
version = "0.1.0"
edition = "2021"

[dependencies]
easy-error = "1.0.0"
serde = "1"
swc_common = "0.37.*"
swc_core = { version = "0.103.*", features = ["ecma_plugin_transform"] }
tracing = { version = "0.1.40", features = ["release_max_level_off"] }

[dev-dependencies]
testing = "0.38.0"
swc_core = { version = "0.103.*", features = ["testing_transform", "ecma_parser"] }