[package]
name = "jsx_control_statements"
version = "0.6.0"
edition = "2021"

[dependencies]
easy-error = "1.0.0"
serde = "1"
swc_common = "5.0.0"
swc_core = { version = "10.1.0", features = ["ecma_plugin_transform"] }
tracing = { version = "0.1.40", features = ["release_max_level_off"] }

[dev-dependencies]
testing = "0.42.0"
swc_core = { version = "10.1.0", features = [
    "ecma_parser",
    "testing_transform",
] }
