[package]
name = "jsx_control_statements"
version = "0.7.0"
edition = "2021"

[dependencies]
swc_common = "5.0.0"
swc_core = { version = "10.6.1", features = ["ecma_plugin_transform"] }
tracing = { version = "0.1.40", features = ["release_max_level_off"] }

[dev-dependencies]
testing = "0.42.0"
swc_core = { version = "10.6.1", features = [
    "ecma_parser",
    "testing_transform",
] }
